# sasctf-quals-2025

./: .gitignore  README.md
tasks/crypto-bigbabycode/: README.md
tasks/crypto-blindspot/: README.md
tasks/crypto-scp-522/: README.md
tasks/minecraft-astigmatism/: README.md
tasks/minecraft-cave-diving/: README.md
tasks/minecraft-cave-diving/sources/gen_labyrinth/: gen.ipynb  pyproject.toml
tasks/minecraft-cave-diving/sources/gen_labyrinth/labyrinth/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
tasks/minecraft-cave-diving/sources/gen_labyrinth/labyrinth/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
tasks/minecraft-library/: README.md
tasks/misc-devtools/: README.md
tasks/misc-faceless-void/: README.md
tasks/misc-wx-underground/: README.md
tasks/mlw-mule-stealer/: README.md
tasks/mlw-music-speed-changer/: README.md
tasks/mlw-teams/: README.md
tasks/pwn-mickey-1337/: README.md
tasks/pwn-my-type/: README.md
tasks/pwn-optee-kernel/: .gitignore  (+1 more)
tasks/web-burmalda/server/app/: .env  main.py  pyproject.toml  requirements.txt  settings.py
tasks/web-burmalda/server/app/api/: game.py  users.py
tasks/web-burmalda/server/app/models/: game_session.py  user.py
tasks/web-burmalda/server/app/repositories/: game_session_repository.py  user_repository.py
tasks/web-burmalda/server/app/templates/: auth.html  casino.html
tasks/web-burmalda/server/app/utils/: ton_addr.py
tasks/web-burmalda/server/app/vip_templates/: vip.html
tasks/web-burmalda/server/app/vip_templates/static/: owl.webm  papeezy_nuts.webm  papeezy_stul.webm
(+303 files in other folders)
